# nasjax

./: IMPLEMENTATION_STATUS.md  README.md  ROADMAP.md  ROADMAP_PINNs.md  TRANSFORMATIONS.md  pyproject.toml  requirements-cpu.txt  requirements-cuda11.txt  requirements.txt
deatf/: evolution.py  evolution.py~  mutation.py
docs/: PHASE3_COMPLETION.md
examples/: README.md  evolution_example.py  evolve_cnn_classification.py  evolve_mlp_classification.py  minimal_example.py  quickstart.py
examples/pinn/: README.md  TROUBLESHOOTING.md  compare_architectures.py  evolve_convection_diffusion.py  evolve_linear_burgers.py  validate_solution.py  visualize_solutions.py
nasjax/: __init__.py
nasjax/descriptors/: __init__.py  base.py  cnn.py  mlp.py  rnn.py  tcnn.py
nasjax/evaluation/: __init__.py  evaluator.py
nasjax/evolution/: __init__.py  crossover.py  evolving.py  mutation.py  population.py
nasjax/networks/: __init__.py  base.py  mlp.py
nasjax/pinn/: __init__.py  evaluators.py  losses.py  networks.py  validation.py  visualization.py
nasjax/pinn/benchmarks/: __init__.py  base.py  convection_diffusion.py  linear_burgers.py
nasjax/training/: __init__.py  losses.py  trainer.py
tests/: __init__.py  test_cnn_descriptor.py  test_crossover.py  test_evaluator.py  test_evolving.py  test_mlp_descriptor.py  test_mlp_network.py  test_mutation.py  test_rnn_descriptor.py  test_tcnn_descriptor.py
